--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,3 @@
-* {
-  background: lightpink;
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -129,6 +126,16 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+div,
+p,
+footer,
+h1,
+h3,
+a,
+nav,
+header {
+  border: solid black 2px;
+}
 * {
   box-sizing: border-box;
 }
@@ -170,6 +177,25 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+header,
+h2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 1.5rem;
+}
+header nav,
+h2 nav {
+  display: flex;
+  justify-content: space-evenly;
+  width: 50%;
+}
+header nav a,
+h2 nav a {
+  color: black;
+  text-decoration: none;
+  font-size: 1.2rem;
 }
 .footer {
   width: 100%;
