--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,19 @@
 // Navigation Styles here
+
+
+header, h2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 1.5rem;
+    nav {
+        display: flex;
+        justify-content: space-evenly;
+        width:50%;
+        a {
+            color:black;
+            text-decoration: none;
+            font-size: 1.2rem;
+        }
+    }
+}
