--- a/less/index.less
+++ b/less/index.less
@@ -22,7 +22,20 @@
 
 
 
+// Mixins
 
+
+// .btn {
+//     border-radius: 25px;
+//     background-color: purple;
+//     padding: 20px;
+//     width: 200px;
+//     height: 150px;
+// }
+
+// .center {
+//     align-items: 
+// }
 
 
 
@@ -86,9 +99,9 @@ table {
 
 // global............................................
 
-div, p, footer, h1, h3, a, nav, header{
-    border:solid black 2px;
-  }
+// div, p, footer, h1, h3, a, nav, header{
+//     border:solid black 2px;
+//   }
 
 
 * {
@@ -141,6 +154,20 @@ div, p, footer, h1, h3, a, nav, header{
 
 
 
+  .btn {
+    border-radius: 8px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    background-color:@button-bg;
+    padding: 15px 10px;
+    width: 95%;
+    font-size: 1.5rem;
+    color: @white;
+
+
+}
+
 
 
 
@@ -153,7 +180,7 @@ header, h2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 1.5rem;
+    padding: 1.5rem 0;
     nav {
         display: flex;
         justify-content: space-evenly;
@@ -175,8 +202,8 @@ header, h2 {
 .footer {
     width: 100%;
     border-top: 2px dashed silver;
-    background: @sandy-beach;
-    
+    background:@sandy-beach;
+
     p {
       text-align: center;
       color: @font-color;
@@ -252,4 +279,7 @@ header, h2 {
         margin-bottom: 30px;
       }
     }
-  }// home
+  }
+  
+  
+  // home page
