--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,14 @@
 // Mixins in here
+.btn {
+    border-radius: 8px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    background-color:@button-bg;
+    padding: 15px 10px;
+    width: 95%;
+    font-size: 1.5rem;
+    color: @white;
+
+
+}
