--- a/less/mixins.less
+++ b/less/mixins.less
@@ -12,3 +12,37 @@
 
 
 }
+
+.button {
+    border-radius: 25px;
+    background-color: purple;
+    padding: 20px;
+    width: 200px;
+    height: 150px;
+}
+
+
+
+// Mixins
+
+
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.space-evenly {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.wrap {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.line {
+    border-bottom: 2px dashed silver;
+}
