--- a/less/index.less
+++ b/less/index.less
@@ -1,4 +1,5 @@
 // Follow the order in the readme
+// Follow the order in the readme
 // @import "variables";
 // @import "mixins";
 
@@ -9,24 +10,20 @@
 // @import "home-page";
 // @import "footer";
 
-
-
-
-// Color assignments 
+// Color assignments
 @font-color: @shark;
 @button-bg: @eastern-blue;
-@main-bg:  @white;
+@main-bg: @white;
 @navigation-border: @silver;
 @footer-bg: @sandy-beach;
 
 // Colors
-@white: #FFFFFF;
-@silver: #C0C0C0;
+@white: #ffffff;
+@silver: #c0c0c0;
 @shark: #212529;
-@eastern-blue: #17A2B8;
-@sandy-beach: #FFEBCD;
-
-
+@eastern-blue: #17a2b8;
+@sandy-beach: #ffebcd;
+@mobile: ~"(max-width: 500px)";
 
 // Mixins in here
 .button {
@@ -34,13 +31,11 @@
   margin: 0 auto;
   display: flex;
   justify-content: center;
-  background-color:@button-bg;
+  background-color: @button-bg;
   padding: 15px 10px;
   width: 95%;
   font-size: 1.5rem;
   color: @white;
-
-
 }
 
 // .button {
@@ -51,84 +46,171 @@
 //   height: 150px;
 // }
 
-
-
-.center {
+.center () {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.space-evenly {
+.space-evenly () {
   display: flex;
   justify-content: space-evenly;
 }
 
-.wrap {
+.wrap () {
   display: flex;
   flex-wrap: wrap;
 }
 
-.line {
+.line () {
   border-bottom: 2px dashed silver;
 }
 
-
-
-
-
-
-
-
-
+.mobileView () {
+  @media (max-width: 500px) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+// .img-content {
+//   width: 40%;
+//   padding-left: 1%;
+//   @media (max-width: 500px) {
+//     order: 2;
+//   }
+//   img {
+//     border-radius: 10px;
+//   }
+// }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 // global............................................
@@ -137,59 +219,66 @@ table {
 //     border:solid black 2px;
 //   }
 
-
 * {
-    box-sizing: border-box;
-  }
-  
-  html {
-    font-size: 62.5%;
-  }
-  
-  html, body {
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  h1, h2, h3, h4, h5 {
-    font-family: 'Indie Flower', cursive;
-  }
-  
-  h1 {
-    font-size: 4rem;
-  }
-  
-  h2 {
-    font-size: 3.2rem;
-    padding-bottom: 10px;
-  }
-  
-  h4 {
-    font-size: 2.5rem;
-    padding-bottom: 10px;
-  }
-  
-  p {
-    line-height: 1.5;
-    font-size: 1.6rem;
-    padding-bottom: 10px;
-  }
-  
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .container {
-    max-width: 800px;
-    width: 100%;
-    margin: 0 auto;
-  }
-  
+  box-sizing: border-box;
+}
 
+html {
+  font-size: 62.5%;
+}
 
+html,
+body {
+  font-family: "Roboto", sans-serif;
+}
 
-  .btn {
-    .button();
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Indie Flower", cursive;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 3.2rem;
+  padding-bottom: 10px;
+}
+
+h4 {
+  font-size: 2.5rem;
+  padding-bottom: 10px;
+}
+
+p {
+  line-height: 1.5;
+  font-size: 1.6rem;
+  padding-bottom: 10px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  max-width: 800px;
+  width: 100wv;
+  margin: 0 auto;
+  //   display: flex;
+  //   flex-direction: column;
+  @media (max-width: 500px) {
+    // background-color: thistle;
+    width: 90%;
+  }
+}
+
+.btn {
+  .button();
 }
 
 .center {
@@ -210,122 +299,136 @@ table {
 
 .line {
   border-top: 2px dashed silver;
-  width:100%;
+  width: 100%;
 }
 
-
-
-
-
-
-
-
-
-
-//   navigation
-header, h2 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 1.5rem;
-  nav {
+//   home-page  ------------------------------->
+.home {
+  .content-section {
+    margin: 30px 0;
+    .wrap();
+    .space-evenly();
+    @media (max-width: 500px) {
       display: flex;
-      justify-content: space-evenly;
-      width:50%;
-      a {
-          color:black;
-          text-decoration: none;
-          font-size: 1.2rem;
-      }
-  }
-}
-
-
-
-
-
-
-.footer {
-    width: 100%;
-    .line();
-    background:@sandy-beach;
-
-    p {
-      text-align: center;
-      color: @font-color;
-      font-size: 1.6rem;
-      padding: 20px;
+      flex-direction: column;
+      width: 100%;
     }
-  }
 
-
-
-
-
-
-
-
-  .home {
-
-    .content-section {
-      margin: 30px 0;
-      .wrap();
-      .space-evenly();
-  
-     
-      
-      .text-content {
-        width: 48%;
-        padding-right: 1%;
-      }
-  
-      .img-content {
-        width: 48%;
-        padding-left: 1%;
-  
-        img {
-          border-radius: 10px;
-        }
+    .text-content {
+      width: 48%;
+      padding-right: 1%;
+      @media (max-width: 500px) {
+        width: 100%;
       }
     }
-  
-    .inverse-content {
-      padding-bottom: 30px;
-     
-      // order:2;
-      
-      .text-content {
-        padding-left: 1%;
-        padding-right: 0;
+
+    .img-content {
+      width: 48%;
+      padding-left: 1%;
+      @media (max-width: 500px) {
+        order: 2;
+        width: 100%;
       }
-  
-      .img-content {
-        padding-right: 1%;
-        padding-left: 0;
-      }
-    }
-   
-    .content-destination {
-      width: 75%;
-      margin: 0 auto 30px;
-  
+
       img {
         border-radius: 10px;
       }
     }
-  
-    .content-pick {
-      padding-top: 30px;
-      border-top: 2px dashed @navigation-border;
+  }
+
+  .inverse-content {
+    padding-bottom: 30px;
+
+    .text-content {
+      padding-left: 1%;
+      padding-right: 0;
+    }
+
+    .img-content {
+      padding-right: 1%;
+      padding-left: 0;
+    }
+  }
+
+  .content-destination {
+    width: 75%;
+    margin: 0 auto 30px;
+    @media (max-width: 500px) {
+      width: 100%;
+    }
+    img {
+      border-radius: 10px;
+    }
+  }
+
+  .content-pick {
+    padding-top: 30px;
+    border-top: 2px dashed @navigation-border;
+    display: flex;
+    justify-content: space-between;
+
+    @media (max-width: 500px) {
       display: flex;
       justify-content: space-between;
-  
-      .destination {
-        width: 30%;
-        margin-bottom: 30px;
+      flex-direction: column;
+      width: 100%;
+      justify-content: center;
+    }
+    .destination {
+      width: 30%;
+      margin-bottom: 30px;
+      @media (max-width: 500px) {
+        width: 70%;
+        margin: auto;
       }
     }
   }
-  
-  
-  // home page
+}
+// home page
+
+//   navigation  ------------------------------------------->
+header {
+  @media (max-width: 500px) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+header,
+h2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 1.5rem;
+
+  nav {
+    display: flex;
+    justify-content: space-evenly;
+    width: 50%;
+    @media (max-width: 500px) {
+      justify-content: space-evenly;
+      width: 100%;
+    }
+
+    a {
+      color: black;
+      text-decoration: none;
+      font-size: 1.2rem;
+    }
+  }
+}
+
+//   footer -------------------------------->
+
+.footer {
+  width: 100%;
+  .line();
+  background: @sandy-beach;
+
+  p {
+    text-align: center;
+    color: @font-color;
+    font-size: 1.6rem;
+    padding: 20px;
+  }
+}
