--- a/css/index.css
+++ b/css/index.css
@@ -3,27 +3,11 @@
   margin: 0 auto;
   display: flex;
   justify-content: center;
-  background-color: #17A2B8;
+  background-color: #17a2b8;
   padding: 15px 10px;
   width: 95%;
   font-size: 1.5rem;
-  color: #FFFFFF;
-}
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.space-evenly {
-  display: flex;
-  justify-content: space-evenly;
-}
-.wrap {
-  display: flex;
-  flex-wrap: wrap;
-}
-.line {
-  border-bottom: 2px dashed silver;
+  color: #ffffff;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -146,7 +130,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 table {
@@ -161,14 +145,14 @@ html {
 }
 html,
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: 'Indie Flower', cursive;
+  font-family: "Indie Flower", cursive;
 }
 h1 {
   font-size: 4rem;
@@ -192,19 +176,24 @@ img {
 }
 .container {
   max-width: 800px;
-  width: 100%;
+  width: 100wv;
   margin: 0 auto;
+}
+@media (max-width: 500px) {
+  .container {
+    width: 90%;
+  }
 }
 .btn {
   border-radius: 8px;
   margin: 0 auto;
   display: flex;
   justify-content: center;
-  background-color: #17A2B8;
+  background-color: #17a2b8;
   padding: 15px 10px;
   width: 95%;
   font-size: 1.5rem;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 .center {
   display: flex;
@@ -223,50 +212,37 @@ img {
   border-top: 2px dashed silver;
   width: 100%;
 }
-header,
-h2 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 1.5rem;
-}
-header nav,
-h2 nav {
-  display: flex;
-  justify-content: space-evenly;
-  width: 50%;
-}
-header nav a,
-h2 nav a {
-  color: black;
-  text-decoration: none;
-  font-size: 1.2rem;
-}
-.footer {
-  border-bottom: 2px dashed silver;
-  border-top: 2px dashed silver;
-  width: 100%;
-  background: #FFEBCD;
-}
-.footer p {
-  text-align: center;
-  color: #212529;
-  font-size: 1.6rem;
-  padding: 20px;
-}
 .home .content-section {
   margin: 30px 0;
   flex-wrap: wrap;
   display: flex;
   justify-content: space-evenly;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    order: 2;
+    width: 100%;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -286,16 +262,80 @@ h2 nav a {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
 .home .content-pick {
   padding-top: 30px;
-  border-top: 2px dashed #C0C0C0;
+  border-top: 2px dashed #c0c0c0;
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 500px) {
+  .home .content-pick {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+  }
 }
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 70%;
+    margin: auto;
+  }
+}
+@media (max-width: 500px) {
+  header {
+    display: flex;
+    flex-direction: column;
+  }
+}
+header,
+h2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 1.5rem;
+}
+header nav,
+h2 nav {
+  display: flex;
+  justify-content: space-evenly;
+  width: 50%;
+}
+@media (max-width: 500px) {
+  header nav,
+  h2 nav {
+    justify-content: space-evenly;
+    width: 100%;
+  }
+}
+header nav a,
+h2 nav a {
+  color: black;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+.footer {
+  border-bottom: 2px dashed silver;
+  border-top: 2px dashed silver;
+  width: 100%;
+  background: #ffebcd;
+}
+.footer p {
+  text-align: center;
+  color: #212529;
+  font-size: 1.6rem;
+  padding: 20px;
 }
