--- a/css/index.css
+++ b/css/index.css
@@ -3,27 +3,22 @@
   margin: 0 auto;
   display: flex;
   justify-content: center;
-  background-color: #17A2B8;
+  background-color: #17a2b8;
   padding: 15px 10px;
   width: 95%;
   font-size: 1.5rem;
-  color: #FFFFFF;
+  color: #ffffff;
 }
-.center {
+.btn {
+  border-radius: 8px;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
-  align-items: center;
-}
-.space-evenly {
-  display: flex;
-  justify-content: space-evenly;
-}
-.wrap {
-  display: flex;
-  flex-wrap: wrap;
-}
-.line {
-  border-bottom: 2px dashed silver;
+  background-color: #17a2b8;
+  padding: 15px 10px;
+  width: 95%;
+  font-size: 1.5rem;
+  color: #ffffff;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -161,17 +156,24 @@ html {
 }
 html,
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: 'Indie Flower', cursive;
+  font-family: "Indie Flower", cursive;
 }
 h1 {
   font-size: 4rem;
+}
+@media (max-width: 500px) {
+  h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 h2 {
   font-size: 3.2rem;
@@ -192,49 +194,42 @@ img {
 }
 .container {
   max-width: 800px;
-  width: 100%;
+  width: 100wv;
   margin: 0 auto;
 }
-.btn {
-  border-radius: 8px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  background-color: #17A2B8;
-  padding: 15px 10px;
-  width: 95%;
-  font-size: 1.5rem;
-  color: #FFFFFF;
+@media (max-width: 500px) {
+  .container {
+    width: 90%;
+  }
 }
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+header {
+  border-bottom: 2px dashed #c0c0c0;
 }
-.space-evenly {
-  display: flex;
-  justify-content: space-evenly;
-}
-.wrap {
-  display: flex;
-  flex-wrap: wrap;
-}
-.line {
-  border-top: 2px dashed silver;
-  width: 100%;
+@media (max-width: 500px) {
+  header {
+    display: flex;
+    flex-direction: column;
+  }
 }
 header,
 h2 {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   padding-top: 1.5rem;
 }
 header nav,
 h2 nav {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   width: 50%;
+}
+@media (max-width: 500px) {
+  header nav,
+  h2 nav {
+    justify-content: space-evenly;
+    width: 100%;
+    padding-bottom: 1.5rem;
+  }
 }
 header nav a,
 h2 nav a {
@@ -242,31 +237,35 @@ h2 nav a {
   text-decoration: none;
   font-size: 1.2rem;
 }
-.footer {
-  border-bottom: 2px dashed silver;
-  border-top: 2px dashed silver;
-  width: 100%;
-  background: #FFEBCD;
-}
-.footer p {
-  text-align: center;
-  color: #212529;
-  font-size: 1.6rem;
-  padding: 20px;
-}
 .home .content-section {
   margin: 30px 0;
   flex-wrap: wrap;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+}
+@media (max-width: 500px) {
+  .home .content-section {
+    width: 100%;
+  }
 }
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    order: 2;
+    width: 100%;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -278,24 +277,54 @@ h2 nav a {
   padding-left: 1%;
   padding-right: 0;
 }
-.home .inverse-content .img-content {
-  padding-right: 1%;
-  padding-left: 0;
-}
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
+  border-top: 2px dashed #c0c0c0;
+}
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
 }
 .home .content-destination img {
   border-radius: 10px;
 }
 .home .content-pick {
   padding-top: 30px;
-  border-top: 2px dashed #C0C0C0;
-  display: flex;
+  border-top: 2px dashed #c0c0c0;
   justify-content: space-between;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-direction: column;
+    justify-content: space-between;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
 }
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 80%;
+  }
+}
+.footer {
+  width: 100%;
+  border-top: 2px dashed #c0c0c0;
+  background: #ffebcd;
+}
+.footer p {
+  text-align: center;
+  color: #212529;
+  font-size: 1.6rem;
+  padding: 20px;
 }
