--- a/less/global.less
+++ b/less/global.less
@@ -1,3 +1,7 @@
+// div, p, footer, h1, h3, a, nav, header{
+//     border:solid black 2px;
+//   }
+
 * {
   box-sizing: border-box;
 }
@@ -6,16 +10,24 @@ html {
   font-size: 62.5%;
 }
 
-html, body {
-  font-family: 'Roboto', sans-serif;
+html,
+body {
+  font-family: "Roboto", sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
-  font-family: 'Indie Flower', cursive;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Indie Flower", cursive;
 }
 
 h1 {
   font-size: 4rem;
+  @media (max-width: 500px) {
+    .center();
+  }
 }
 
 h2 {
@@ -41,6 +53,12 @@ img {
 
 .container {
   max-width: 800px;
-  width: 100%;
+  width: 100wv;
   margin: 0 auto;
+  //   display: flex;
+  //   flex-direction: column;
+  @media (max-width: 500px) {
+    // background-color: thistle;
+    width: 90%;
+  }
 }
