--- a/less/index.less
+++ b/less/index.less
@@ -1,331 +1,10 @@
 // Follow the order in the readme
-// @import "variables";
-// @import "mixins";
-
-// @import "reset";
-// @import "global";
-
-// @import "navigation";
-// @import "home-page";
-// @import "footer";
-
-
-
-
-// Color assignments 
-@font-color: @shark;
-@button-bg: @eastern-blue;
-@main-bg:  @white;
-@navigation-border: @silver;
-@footer-bg: @sandy-beach;
-
-// Colors
-@white: #FFFFFF;
-@silver: #C0C0C0;
-@shark: #212529;
-@eastern-blue: #17A2B8;
-@sandy-beach: #FFEBCD;
-
-
-
-// Mixins in here
-.button {
-  border-radius: 8px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  background-color:@button-bg;
-  padding: 15px 10px;
-  width: 95%;
-  font-size: 1.5rem;
-  color: @white;
-
-
-}
-
-// .button {
-//   border-radius: 25px;
-//   background-color: purple;
-//   padding: 20px;
-//   width: 200px;
-//   height: 150px;
-// }
-
-
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.space-evenly {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.wrap {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.line {
-  border-bottom: 2px dashed silver;
-}
-
-
-
-
-
-
-
-
-
-
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-// global............................................
-
-// div, p, footer, h1, h3, a, nav, header{
-//     border:solid black 2px;
-//   }
-
-
-* {
-    box-sizing: border-box;
-  }
-  
-  html {
-    font-size: 62.5%;
-  }
-  
-  html, body {
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  h1, h2, h3, h4, h5 {
-    font-family: 'Indie Flower', cursive;
-  }
-  
-  h1 {
-    font-size: 4rem;
-  }
-  
-  h2 {
-    font-size: 3.2rem;
-    padding-bottom: 10px;
-  }
-  
-  h4 {
-    font-size: 2.5rem;
-    padding-bottom: 10px;
-  }
-  
-  p {
-    line-height: 1.5;
-    font-size: 1.6rem;
-    padding-bottom: 10px;
-  }
-  
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .container {
-    max-width: 800px;
-    width: 100%;
-    margin: 0 auto;
-  }
-  
-
-
-
-  .btn {
-    .button();
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.space-evenly {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.wrap {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.line {
-  border-top: 2px dashed silver;
-  width:100%;
-}
-
-
-
-
-
-
-
-
-
-
-//   navigation
-header, h2 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 1.5rem;
-  nav {
-      display: flex;
-      justify-content: space-evenly;
-      width:50%;
-      a {
-          color:black;
-          text-decoration: none;
-          font-size: 1.2rem;
-      }
-  }
-}
-
-
-
-
-
-
-.footer {
-    width: 100%;
-    .line();
-    background:@sandy-beach;
-
-    p {
-      text-align: center;
-      color: @font-color;
-      font-size: 1.6rem;
-      padding: 20px;
-    }
-  }
-
-
-
-
-
-
-
-
-  .home {
-
-    .content-section {
-      margin: 30px 0;
-      .wrap();
-      .space-evenly();
-  
-     
-      
-      .text-content {
-        width: 48%;
-        padding-right: 1%;
-      }
-  
-      .img-content {
-        width: 48%;
-        padding-left: 1%;
-  
-        img {
-          border-radius: 10px;
-        }
-      }
-    }
-  
-    .inverse-content {
-      padding-bottom: 30px;
-     
-      // order:2;
-      
-      .text-content {
-        padding-left: 1%;
-        padding-right: 0;
-      }
-  
-      .img-content {
-        padding-right: 1%;
-        padding-left: 0;
-      }
-    }
-   
-    .content-destination {
-      width: 75%;
-      margin: 0 auto 30px;
-  
-      img {
-        border-radius: 10px;
-      }
-    }
-  
-    .content-pick {
-      padding-top: 30px;
-      border-top: 2px dashed @navigation-border;
-      display: flex;
-      justify-content: space-between;
-  
-      .destination {
-        width: 30%;
-        margin-bottom: 30px;
-      }
-    }
-  }
-  
-  
-  // home page
+@import "variables";
+@import "mixins";
+
+@import "reset";
+@import "global";
+
+@import "navigation";
+@import "home-page";
+@import "footer";
