--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,19 +1,28 @@
-// Navigation Styles here
+header {
+  border-bottom: @line;
+  @media (max-width: 500px) {
+    .flex-column();
+  }
+}
 
+header,
+h2 {
+  .space-between();
+  padding-top: 1.5rem;
 
-header, h2 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 1.5rem;
-    nav {
-        display: flex;
-        justify-content: space-evenly;
-        width:50%;
-        a {
-            color:black;
-            text-decoration: none;
-            font-size: 1.2rem;
-        }
+  nav {
+    .space-between();
+    width: 50%;
+    @media (max-width: 500px) {
+      justify-content: space-evenly;
+      width: 100%;
+      padding-bottom: 1.5rem;
     }
+
+    a {
+      color: black;
+      text-decoration: none;
+      font-size: 1.2rem;
+    }
+  }
 }
